codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_copy_running_task_info_message.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4476
expression: rendered
---
• Copied latest Codex output to clipboard. Current turn is still running; copied the latest completed output (not the in-progress response).
