codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_copy_success_info_message.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4363
expression: rendered.clone()
---
• Copied latest Codex output to clipboard.
