codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_daybreak_help_disable.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 80).lines().next().unwrap()"
---
› /daybreak  Disable broader access for cybersecurity work
